# INR-SoS-Recon

./: .gitignore  EXPERIMENT_PLAN.md  README.md  litrature-exploration.txt  main.py  pyproject.toml  references_kwave_gap.txt  research-synthesis.md
docs/: mismatch_approaches.md
notebooks/: benchmark_results.csv  experiment5_geometry_exploration.ipynb  exploration-real-data.ipynb  inverse-crime-data-exploration.ipynb  inverse_crime_experiment.ipynb  validation-k-wave.ipynb
notebooks/experiments/Fourier_RayBatching_ScaleTuning/: 20260217_2055_FourierMLP_Scale0.7_TV0_Sample0_pred.npy  20260217_2056_FourierMLP_Scale0.7_TV0_Sample1_gt.npy  20260217_2056_FourierMLP_Scale0.7_TV0_Sample1_pred.npy  20260217_2338_FourierMLP_Scale0.7_TV0_Sample5171_pred.npy  20260217_2339_FourierMLP_Scale0.7_TV0_Sample2862_gt.npy  20260217_2339_FourierMLP_Scale0.7_TV0_Sample2862_pred.npy  20260217_2357_FourierMLP_Scale0.7_TV0_Sample5171_gt.npy  20260217_2357_FourierMLP_Scale0.7_TV0_Sample5171_pred.npy  20260217_2359_FourierMLP_Scale0.7_TV0_Sample2862_pred.npy  20260218_0014_FourierMLP_Scale0.7_TV0_Sample8847_gt.npy  (+29 more)
scripts/: benchmark_results.csv  check_sweep.py  compare_baselines.py  compare_topk.py  create_sweep.py  datasets.yaml  plot_layer12.py  run_best.py  run_denoiser_test.py  run_eikonal_bent_ray.py  run_kaipio_somersalo.py  run_layer12_experiment.py  run_layer3_experiment.py  run_parallel_sweeps.py  run_reconstruction.py  run_svd_constrained.py  run_sweep.py  sweep_registry.json  test_bias_absorption.py  test_svd_inr.py
src/inr_sos/: __init__.py
src/inr_sos/MLP/: models.py
(+68 files in other folders)
