[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "inr-sos-recon"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.3",
    "matplotlib>=3.10.8",
    "scipy>=1.17.0",
    "h5py>=3.11.0",
    "joblib>=1.5.3",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "wandb>=0.25.0",
    "scikit-image>=0.26.0",
]

[tool.setuptools.packages.find]
where = ["src"]
